Update Magic Scissors references to Doppelganger

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Magic Scissors: Synthetic Dataset Generation for Computer Vision</title>
+    <title>Celebrity Doppelganger</title>
 
     <meta name="viewport" content="width=640, user-scalable=no" />
     <meta name="robots" content="noindex">
