Process uploaded image to base64

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=640, user-scalable=no" />
     <meta name="robots" content="noindex">
 
+    <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-load-image/2.24.0/load-image.all.min.js"></script>
     <script src="https://kit.fontawesome.com/c9c3956d39.js" crossorigin="anonymous"></script>
 </head>
 <body>
